force-app/main/default/objects/Subscription_Service__c/Subscription_Service__c.object-meta.xml
<CustomObject>
    <description>This object is for Data Syndication.</description>
    <label>Subscription Service</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Subscription Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>