force-app/main/default/objects/Subscription_Service__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is a lookup to the Account.</description>
    <inlineHelpText>This field is a lookup to the Account.</inlineHelpText>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Services</relationshipLabel>
    <relationshipName>Subscription_Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>