force-app/main/default/objects/Subscription_Service__c/fields/Broker_of_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Broker_of_Record_ID__c</fullName>
    <label>Broker of Record ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>