force-app/main/default/objects/Subscription_Service__c/fields/Broker_of_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_of_Record_Name__c</fullName>
    <label>Broker of Record Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>