force-app/main/default/objects/Subscription_Service__c/fields/Cornerstone_ID__c.field-meta.xml
<CustomField>
    <fullName>Cornerstone_ID__c</fullName>
    <label>Job ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>