force-app/main/default/objects/Subscription_Service__c/fields/Job_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_End_Date__c</fullName>
    <label>Processing End Date</label>
    <type>DateTime</type>
</CustomField>