force-app/main/default/objects/Subscription_Service__c/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <label>Processing Start Date</label>
    <type>DateTime</type>
</CustomField>