force-app/main/default/objects/Subscription_Service__c/fields/New_Selection_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Selection_Value__c</fullName>
    <label>New Selection Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>