force-app/main/default/objects/Subscription_Service__c/fields/Old_Selection_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Selection_Value__c</fullName>
    <label>Old Selection Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>