force-app/main/default/objects/Subscription_Service__c/fields/Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Subscription Services</relationshipLabel>
    <relationshipName>Subscription_Services</relationshipName>
    <type>Lookup</type>
</CustomField>