force-app/main/default/objects/Subscription_Service__c/fields/Syndication_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Syndication_Site_Name__c</fullName>
    <label>Syndication Site Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>