force-app/main/default/objects/Subscription_Service__c/fields/Total_Listing_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Listing_Number__c</fullName>
    <label>Total Number of Listings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>